# mrhyde

./: .gitignore  FOR_AGENTS.md  LICENSE  README.md  _dash_out.txt  _kill_and_restart.ps1  _kill_server.ps1  _serve_dashboard.py  pyproject.toml
.github/workflows/: publish.yml
docs/: index.html
src/mrhyde/: __init__.py  __main__.py  cli.py  dashboard.html  dashboard.py  db.py
